# cdpy

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  NOTICE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  requirements.txt
src/cdpy/: __version__.py  cdpy.py  common.py  datahub.py  datalake.py  dc.py  de.py  df.py  drscp.py  dw.py  environments.py  iam.py  metrics.py  ml.py  opdb.py
tests/: conftest.py  test_credentials.py  test_environments.py  test_iam.py
