[project]
name = "cdpy"
description = "A Pythonic client wrapper for Cloudera on Cloud"
license = "Apache-2.0"
license-files = ["LICENSE*", "NOTICE*"]
authors = [
    { name = "Cloudera, Inc.", email = "cloudera-labs@cloudera.com" }
]
keywords = [
    "cloudera",
    "cdp",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "importlib-metadata",
  "cdpcli-beta>=0.9.101"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/cloudera-labs/cdpy/README.md"
Source = "https://github.com/cloudera-labs/cdpy/"

[tool.hatch.version]
path = "src/cdpy/__version__.py"
scheme = "semver"
validate-bump = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "wheel",
  "flake8",
  "pre-commit",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=cdpy --cov=tests"
lint = [
  "pre-commit run --all-files"
]

[tool.flake8]
# Some sane defaults for the code style checker flake8
exclude = [
  "build",
  "dist",
  ".eggs",
  "docs/conf.py",
]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx"
]

[tool.hatch.envs.docs.scripts]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-sugar"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[build-system]
requires = [
  "hatchling",
  "hatch-semver"
]
build-backend = "hatchling.build"
